--- a/moviesite/actor.html
+++ b/moviesite/actor.html
@@ -7,14 +7,14 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>JPMDb | Felicity Jones</title>
     <!-- Links to CSS -->
-    <link href="../css/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+    <link href="css/font-awesome/css/font-awesome.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Raleway:400,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Encode+Sans+Condensed:400,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Quicksand:400,700" rel="stylesheet">
-    <link href="../css/normalize.css" rel="stylesheet" media="screen">
-    <link href="../css/actor.css" rel="stylesheet" media="screen">
-    <link rel="icon" href="../images/Logo_favicon_JPMDb.png" type="image/png" sizes="16x16">
+    <link href="css/normalize.css" rel="stylesheet" media="screen">
+    <link href="css/actor.css" rel="stylesheet" media="screen">
+    <link rel="icon" href="images/Logo_favicon_JPMDb.png" type="image/png" sizes="16x16">
 </head>
 
 <body>
@@ -22,7 +22,7 @@
         <div id="header">
             <div class="header_left">
                 <a href="index.html" class="logo" title="JPMDb | Homepage">
-                        <img src="../images/Logo JPMDb.png" alt="logo">
+                        <img src="images/Logo JPMDb.png" alt="logo">
                     </a>
             </div>
             <div class="header_right">
@@ -62,7 +62,7 @@
                     </div>
                 </div>
                 <div class="felicity_portrait">
-                    <img class="main_img" src="../images/felicity-jones.jpg" alt="Felicity Jones Image">
+                    <img class="main_img" src="images/felicity-jones.jpg" alt="Felicity Jones Image">
                 </div>
             </section>
             <section id="filmography">
@@ -75,13 +75,13 @@
                             <div class="played_movie_1">
                                 <li>
                                     <p>The Amazing Spider-Man 2 (2014)</p>
-                                    <img class="movies_images" src="../images/the-amazing-spider-man-2.jpg" alt="Spider-Man poster">
+                                    <img class="movies_images" src="images/the-amazing-spider-man-2.jpg" alt="Spider-Man poster">
                                 </li>
                             </div>
                             <div class="played_movie_2">
                                 <li>
                                     <p>The Theory of Everything (2014)</p>
-                                    <img class="movies_images" src="../images/theory-of-everything.jpg" alt="The Theory of Everything poster">
+                                    <img class="movies_images" src="images/theory-of-everything.jpg" alt="The Theory of Everything poster">
                                 </li>
                             </div>
                         </div>
@@ -89,14 +89,14 @@
                             <div class="played_movie_3">
                                 <li>
                                     <p>Inferno (2016)</p>
-                                    <img class="movies_images" src="../images/inferno.jpg" alt="Inferno poster">
+                                    <img class="movies_images" src="images/inferno.jpg" alt="Inferno poster">
                                 </li>
                             </div>
                             <div class="played_movies_4">
                                 <li>
                                     <a href="movie.html" title="JPMDb | Rogue One">
                                         <p>Rogue One (2016)</p>
-                                        <img class="movies_images" src="../images/rogue-one.jpg" alt="Rogue One poster">
+                                        <img class="movies_images" src="images/rogue-one.jpg" alt="Rogue One poster">
                                     </a>
                                 </li>
                             </div>
