--- a/moviesite/movie.html
+++ b/moviesite/movie.html
@@ -7,14 +7,14 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>JPMDb | Star Wars Rogue One</title>
     <!-- Links to CSS -->
-    <link href="../css/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+    <link href="css/font-awesome/css/font-awesome.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Raleway:400,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Encode+Sans+Condensed:400,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Quicksand:400,700" rel="stylesheet">
-    <link href="../css/normalize.css" rel="stylesheet" media="screen">
-    <link href="../css/movie.css" rel="stylesheet" media="screen">
-    <link rel="icon" href="../images/Logo_favicon_JPMDb.png" type="image/png" sizes="16x16">
+    <link href="css/normalize.css" rel="stylesheet" media="screen">
+    <link href="css/movie.css" rel="stylesheet" media="screen">
+    <link rel="icon" href="images/Logo_favicon_JPMDb.png" type="image/png" sizes="16x16">
 </head>
 
 <body>
@@ -22,7 +22,7 @@
         <div id="header">
             <div class="header_left">
                 <a href="index.html" class="logo" title="JPMDb | Homepage">
-                <img src="../images/Logo JPMDb.png" alt="logo">
+                <img src="images/Logo JPMDb.png" alt="logo">
             </a>
             </div>
             <div class="header_right">
@@ -58,7 +58,7 @@
                     </div>
                 </div>
                 <div class="rogue_one_poster">
-                    <img class="main_img" src="../images/rogue-one.jpg" alt="Rogue One poster">
+                    <img class="main_img" src="images/rogue-one.jpg" alt="Rogue One poster">
                 </div>
             </section>
             <section id="cast">
@@ -73,7 +73,7 @@
                                     <div class="transparent_background">
                                         <p>Diego Luna</p>
                                     </div>
-                                    <img class="cast_images" src="../images/diego-luna.jpg" alt="Diego Luna">
+                                    <img class="cast_images" src="images/diego-luna.jpg" alt="Diego Luna">
                                 </li>
                             </div>
                             <div class="cast_member_2">
@@ -83,7 +83,7 @@
                                             <a href="actor.html" title="JPMDb | Felicity Jones">Felicity Jones</a>
                                         </p>
                                     </div>
-                                    <img class="cast_images" src="../images/felicity-jones.jpg" alt="Felicity Jones">
+                                    <img class="cast_images" src="images/felicity-jones.jpg" alt="Felicity Jones">
                                 </li>
                             </div>
                         </div>
@@ -93,7 +93,7 @@
                                     <div class="transparent_background">
                                         <p>Alan Tudyk</p>
                                     </div>
-                                    <img class="cast_images" src="../images/alan-tudyk.jpg" alt="Alan Tudyk">
+                                    <img class="cast_images" src="images/alan-tudyk.jpg" alt="Alan Tudyk">
                                 </li>
                             </div>
                             <div class="cast_member_4">
@@ -101,7 +101,7 @@
                                     <div class="transparent_background">
                                         <p>Donnie Yen</p>
                                     </div>
-                                    <img class="cast_images" src="../images/donnie-yen.jpg" alt="Donnie Yen">
+                                    <img class="cast_images" src="images/donnie-yen.jpg" alt="Donnie Yen">
                                 </li>
                             </div>
                         </div>
