--- a/moviesite/index.html
+++ b/moviesite/index.html
@@ -7,14 +7,14 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>JPMDb</title>
     <!-- Links to CSS -->
-    <link href="../css/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+    <link href="css/font-awesome/css/font-awesome.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Raleway:400,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Encode+Sans+Condensed:400,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Quicksand:400,700" rel="stylesheet">
-    <link href="../css/normalize.css" rel="stylesheet" media="screen">
-    <link href="../css/main.css" rel="stylesheet" media="screen">
-    <link rel="icon" href="../images/Logo_favicon_JPMDb.png" type="image/png" sizes="16x16">
+    <link href="css/normalize.css" rel="stylesheet" media="screen">
+    <link href="css/main.css" rel="stylesheet" media="screen">
+    <link rel="icon" href="images/Logo_favicon_JPMDb.png" type="image/png" sizes="16x16">
 </head>
 
 <body>
@@ -22,7 +22,7 @@
         <div id="header">
             <div class="header_left">
                 <a href="index.html" class="logo" title="JPMDb | Homepage">
-                <img src="../images/Logo JPMDb.png" alt="logo">
+                <img src="images/Logo JPMDb.png" alt="logo">
             </a>
             </div>
             <div class="header_right">
